loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__std_derives_comparison_compiled.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
/// Eq trait - Provides equality comparison (`==` and `!=`)
/// Python equivalent: `__eq__`, `__ne__`
///
/// When derived, compares all fields for equality.
///
/// Examples:
///
/// ```ignore
/// @derive(Eq)
/// model Point:
///     x: int
///     y: int
///
/// p1 = Point(x=10, y=20)
/// p2 = Point(x=10, y=20)
/// p3 = Point(x=5, y=5)
///
/// println(p1 == p2)  # true
/// println(p1 != p3)  # true
/// ```
///
/// Custom equality (override specific fields):
///
/// ```ignore
/// model User:
///     id: int
///     name: str
///     cache_key: str  # Don't include in equality
///
///     def __eq__(self, other: User) -> bool:
///         return self.id == other.id  # Only compare by id
/// ```
pub trait Eq: PartialEq {
    fn __ne__(&self, other: Self) -> bool;
}
/// Ord trait - Provides ordering comparison (`<`, `<=`, `>`, `>=`) and sorting
/// Python equivalent: `__lt__`, `__le__`, `__gt__`, `__ge__`
/// Ord refines Eq: any type that adopts or derives Ord is also an Eq type.
///
/// When derived, compares fields in declaration order.
///
/// Examples:
///
/// ```ignore
/// @derive(Ord)
/// model Score:
///     points: int
///     name: str
///
/// alice = Score(points=100, name="Alice")
/// bob = Score(points=85, name="Bob")
///
/// println(alice > bob)   # true (100 > 85)
/// println(bob <= alice)  # true
/// ```
///
/// Custom ordering:
///
/// ```ignore
/// model Player:
///     name: str
///     score: int
///
///     def __lt__(self, other: Player) -> bool:
///         return self.score < other.score  # Only compare by score
/// ```
pub trait Ord: PartialEq {
    fn __lt__(&self, other: Self) -> bool;
    fn __le__(&self, other: Self) -> bool;
    fn __gt__(&self, other: Self) -> bool;
    fn __ge__(&self, other: Self) -> bool;
}
/// Hash trait - Enables use as Dict keys or in Sets
///
/// WHY IT'S NEEDED:
/// Sets and Dicts use hashing internally for fast lookups. Without Hash,
/// you get a compile error when trying to use your type in a Set or as a Dict key.
///
/// When derived, combines all fields into a single hash integer.
///
/// Examples:
///
/// ```ignore
/// # Without @derive(Hash), this won't compile:
/// # ids: Set[UserId] = Set()  # Error: UserId doesn't implement Hash
///
/// # With Hash derived, it works:
/// @derive(Eq, Hash)
/// model UserId:
///     value: int
///
/// mut ids: Set[UserId] = Set()
/// ids.add(UserId(value=1))
/// ids.add(UserId(value=2))
///
/// # Also required for Dict keys:
/// mut names: Dict[UserId, str] = Dict()
/// names[UserId(value=1)] = "Alice"
/// ```
///
/// A Set or Dict hashes a type only through `@derive(Hash)` (or `Hash` in
/// `@rust.derive(...)`). A method named `__hash__`, including the one this trait
/// declares, is an ordinary method: a Set or Dict does not call it.
pub trait Hash {
    fn __hash__(&self) -> i64;
}
